tried adding popover html to index but overlapping id issue

--- a/zotcourse/static/css/main.css
+++ b/zotcourse/static/css/main.css
@@ -367,3 +367,7 @@ ul {
 .listing-btn {
 	padding-right: 10px;
 }
+
+#popover-html {
+	display: none;
+}
